traces/bug_478.txt
examples++-load/gmsh.cpp:762: error: DEAD_STORE
  The value written to &num (type int) is never used.
Showing all 1 steps of the trace


examples++-load/gmsh.cpp:762:3: Write of unused value
760.   		if(fread(data, sizeof(int), n, fp) != n) exit(1);
761.   		if(swap) SwapBytes((char*)data, sizeof(int), n);
762.   		int num = data[0];
         ^
763.   		int physical = (numTags > 0) ? data[4 - numTags] : 0;
764.   		int elementary = (numTags > 1) ? data[4 - numTags + 1] : 0;
